<resources>
    <string name="app_name">RoseBotTablet</string>
    <string name="kielivalinta">Valitse kieli.</string>
    <string name="fantapuhe"> If you go here you find Scifi, Fantasy and Horror books.</string>
    <string name="scifipuhe">If you go here you find sci-fi books.</string>
    <string name="mispuhe">The red marker on the map shows your location in the store.</string>
    <string name="terve">Hi, my name is Rose Bot. You can ask me where the different book categories are or press the ready button.I record all the speech for research and development. You can ask a category question after the beep? </string>
    <string name="kiitos"> It was a great pleasure to help. Now I am going back to sleep.</string>
    <string name="enymr">Sorry I didn\'t understand, can you ask again?</string>
    <string name="kysyuu">Sorry, I don\'t understand you. You can also press the ready button, or click on me and try asking again.</string>
    <string name="keskus">Thanks for asking. I am fine. How are you?</string>
    <string name="kuuluu">Great to hear you are fine. How can I help you? </string>
    <string name="kaunospeak">Here you can select the category of fiction you are looking for.</string>
    <string name="tietospeak">Here you can select the non-fiction category you are looking for.</string>
    <string name="svenFranDeutspuhe">Here you can choose from books in Swedish, French or German.</string>
    <string name="runopuhe">If you go here you find poetry</string>
    <string name="rikojanpuhe">If you go here you find crime and suspense books.</string>
    <string name="elokuvatpuhe">If you go here you find movies.</string>
    <string name="ajankohtaistapuhe">If you go here you will find topical books.</string>
    <string name="paperituotteetpuhe">If you go here you will find paper products.</string>
    <string name="rikospuhe">Here you can select the category of criminal literature you are looking for.</string>
    <string name="pokkaritpuhe">Here you can select the desired paperback category.</string>
    <string name="ruotsinkielipuhe">If you go here you will find books in Swedish.</string>
    <string name="ranskankielipuhe">If you go here you will find books in French.</string>
    <string name="saksankielipuhe">If you go here you will find books in German.</string>
    <string name="baabelpuhe">If you go here you will find the Babylonians.</string>
    <string name="antikvaarisetpuhe">If you go here then you will find the Antiquarian books.</string>
    <string name="esseepuhe">If you go here you will find essays.</string>
    <string name="kaunokirjallisuuspuhe">If you go here you will find books on fiction</string>
    <string name="keltapuhe">If you go here you will find the yellow library</string>
    <string name="uudetkaunopuhe">If you go here then you will find new fiction books.</string>
    <string name="klassikotpuhe">If you go here you will find the classics fiction.</string>
    <string name="otavpuhe">If you go here you will find the Otava Library.</string>
    <string name="aanipuhe">If you go here you will find audiobooks.</string>
    <string name="ukrvenapuhe">If you go here you will find Russia books.</string>
    <string name="elokteatpuhe">If you go here then you will find movie and theater books.</string>
    <string name="elamankpuhe">If you go here then you will find biography books.</string>
    <string name="antiikkikirjallisuuspuhe">If you go here then you will find ancient literature books.</string>
    <string name="holokaustipuhe">If you go here then you will find holocaust books.</string>
    <string name="ilmastonmuutospuhe">If you go here then you will find climate change books.</string>
    <string name="filopuhe">If you go here then you will find philosophy books.</string>
    <string name="histpuhe">If you go here then you will find history books.</string>
    <string name="musiipuhe">If you go here then you will find music books.</string>
    <string name="politpuhe">If you go here you will find policy books.</string>
    <string name="sanakpuhe">If you go here you will find dictionaries.</string>
    <string name="tiedpuhe">If you go here you will find new science books.</string>
    <string name="kieletpuhe">If you go here you will find language books.</string>
    <string name="luonnontieteetpuhe">If you go here you will find natural sciences.</string>
    <string name="luontokasvitelaimetpuhe">If you go here then you will find books on Nature, Plants and Animals.</string>
    <string name="maatjakulttuuripuhe">If you go here you will find books about countries and culture.</string>
    <string name="matkailupuhe">If you go here then you will find travel books.</string>
    <string name="puutarhapuhe">If you go here then you will find garden books.</string>
    <string name="ruokapuhe">If you go here you will find food themed books.</string>
    <string name="taidejadesignpuhe">If you go here then you will find art and design books.</string>
    <string name="terveyspuhe">If you go here you will find health books.</string>
    <string name="tieteellinenkirjoittaminenpuhe">If you go here you will find books on scientific writing and literature.</string>
    <string name="urheilupuhe">If you go here then you will find sports books.</string>
    <string name="uskonnotpuhe">If you go here then you will find religion books.</string>
    <string name="lastenromaanipuhe">If you go here you will find children\'s novels.</string>
    <string name="kidspuhe">If you go here you will find children\'s books in English.</string>
    <string name="lastelopuhe">If you go here you will find children\'s movies.</string>
    <string name="lastenpuhe">If you go here you will find children\'s books.</string>
    <string name="lasttiepuhe">If you go here you will find Children\'s Nonfiction.</string>
    <string name="lastenkuvakirjapuhe">If you go here you will find children\'s picture books.</string>
    <string name="ruotsilastenpuhe">If you go here you will find children\'s books in Swedish.</string>
    <string name="vauvojenkirjapuhe">If you go here you will find babies and toddlers books.</string>
    <string name="nuoretpuhe">If you go here you will find books for young people.</string>
    <string name="laptpuuhpuhe">If you go here you will find something to do for the kids.</string>
    <string name="crimeNovEngpuhe">If you go here then you will find Crime novels, in English.</string>
    <string name="rikosuudetpuhe">If you go here then you will find new criminal books.</string>
    <string name="rikospokkapuhe">If you go here then you will find Crime pockets.</string>
    <string name="rikosromaanipuhe">If you go here you will find Crime novel.</string>
    <string name="truecrimepuhe">If you go here you will find True Crime books.</string>
    <string name="kaunopokkaritpuhe">If you go here then you will find beauty paperback.</string>
    <string name="scifijafantasiapokkaritpuhe">If you go here then you will find sci-fi and fantasy paperback.</string>
    <string name="tietopokkaritpuhe">If you go here you will find information paperback.</string>
    <string name="crimepuhe">If you go here you will find crime books in English.</string>
    <string name="fictionpuhe">If you go here you will find English fiction.</string>
    <string name="nonfictionpuhe">If you go here you will find non-fiction in English.</string>
    <string name="poetrypuhe">If you go here you will find English poetry.</string>
    <string name="engscifipuhe">If you go here you will find sci-fi books in English.</string>
    <string name="newfictionpuhe">If you go here you will find the new Fiction in English.</string>
    <string name="newnonfictionpuhe">If you go here you will find the new Nonfiction Books in English.</string>
    <string name="lehdpuhe">If you go here you will find True Crime books.</string>
    <string name="sarjapuhe">If you go here you will find comics.</string>
    <string name="pokkapuhe">If you go here you will find paperback</string>
    <string name="lastenkatepuhe">Here you can select the desired children\'s literature category.</string>
    <string name="englanpuhe">Here you can select the desired category from the English books.</string>
    <string name="ylakatepuhe">Here you can select the top category or topic you want.</string>
    <string name="ohje">Ask me what you want to know by clicking on me or select a ready button.</string>
    <string name="otsikko">Bookstore</string>
    <string name="kieli">Kieli</string>
    <string name="where">You are <br/>here</string>
    <string name="ylakate">Return to the top categories</string>
    <string name="alotusbtn">Press to start</string>
    <string name="kaunokirbtn">Fiction</string>
    <string name="tietokirbtn">non-fiction</string>
    <string name="lapsebtn">Children</string>
    <string name="sarjakuvbtn">Comics</string>
    <string name="rikoskirjallisuusbtn">Criminal literature</string>
    <string name="engkirjbtn">In English</string>
    <string name="lehdtbtn">Magazines</string>
    <string name="pokkaritbtn">Paperback</string>
    <string name="svenFranDeutsbtn">Sweden, France and Germany</string>
    <string name="elokuvatbtn">Movies</string>
    <string name="ajankohtaistabtn">Topical</string>
    <string name="paperituotteetbtn">Paper products</string>
    <string name="ruotsinkielibtn">Books in Swedish</string>
    <string name="ranskankielibtn">Books in French</string>
    <string name="saksankielibtn">Books in German</string>
    <string name="baabelbtn">Babylon</string>
    <string name="antikvaarisetbtn">Antiquarian</string>
    <string name="esseetbtn">Essay</string>
    <string name="kaunokirjbtn">Fiction</string>
    <string name="keltainebtn">Yellow Library</string>
    <string name="uudetkaunobtn">New fiction</string>
    <string name="klassikotbtn">Classics</string>
    <string name="otavabtn">Otava Library</string>
    <string name="fantabtn">Scifi, Fantasy and Horror</string>
    <string name="runobtn">Poetry</string>
    <string name="rikojanbtn">Crime and suspense</string>
    <string name="scifibtn">Scifi</string>
    <string name="aanikbtn">Audiobooks</string>
    <string name="ukravenabtn">Russia</string>
    <string name="eloteatbtn">Cinema and theater</string>
    <string name="elamankbtn">Biographies</string>
    <string name="antiikkikirjallisuusbtn">Ancient literature</string>
    <string name="holokaustibtn">Holocaust</string>
    <string name="ilmastonmuutosbtn">Climate change</string>
    <string name="filobtn">Philosophy</string>
    <string name="histbtn">History</string>
    <string name="musiibtn">Music</string>
    <string name="politbtn">Policy</string>
    <string name="sanakbtn">Dictionaries</string>
    <string name="tietobtn">New nonfiction</string>
    <string name="kieletbtn">Languages</string>
    <string name="kasityojarakentaminenbtn">Crafts and construction</string>
    <string name="kasityojarakentaminenpuhe">If you go here you will find craft and construction books.</string>
    <string name="luonnontieteetbtn">Natural sciences</string>
    <string name="luontokasvitelaimetbtn">Nature, Plants and Animals</string>
    <string name="maatjakulttuuribtn">Countries and Culture</string>
    <string name="matkailubtn">Tourism</string>
    <string name="puutarhabtn">Garden</string>
    <string name="ruokabtn">Food</string>
    <string name="taidejadesignbtn">Art and Design</string>
    <string name="terveysbtn">Health</string>
    <string name="tieteellinenkirjoittaminenbtn">Scientific writing</string>
    <string name="urheilubtn">Sport</string>
    <string name="uskonnotbtn">Religion</string>
    <string name="lastenromaanibtn">Children\'s novel</string>
    <string name="kidsbtn">Children\'s books in English</string>
    <string name="lastelobtn">Kids\' movies</string>
    <string name="lastenbtn">Children\'s books</string>
    <string name="lasttietbtn">Children\'s Nonfiction</string>
</resources>