<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/otsikko"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#990600"
        android:text="@string/otsikko"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/resButton"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_replay_24" />

    <!--  <pl.droidsonroids.gif.GifImageView
          android:id="@+id/gif"
          android:gravity="center"
          android:layout_width="250dp"
          android:layout_height="300dp"
          android:layout_alignParentStart="true"
          android:layout_alignParentTop="true"
          android:layout_marginStart="112dp"
          android:layout_marginTop="165dp"
          android:visibility="invisible"
          android:src="@drawable/androidspeak"
          />-->


    <Button
        android:id="@+id/shlang"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/kieli"


        android:layout_marginStart="10dp"

        android:layout_marginTop="1dp" />

    <Button
        android:id="@+id/converBtn"

        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"


        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#990600"
        android:gravity="center"
        android:text="@string/alotusbtn"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/hahmo"

        android:layout_width="800dp"
        android:layout_height="900dp"

        android:layout_centerInParent="true"
        android:src="@drawable/androidukko"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/voiceBtn"
        android:layout_width="239dp"
        android:layout_height="286dp"
        android:layout_alignStart="@+id/hahmo"
        android:layout_alignTop="@+id/hahmo"
        android:layout_alignEnd="@+id/hahmo"

        android:layout_alignBottom="@+id/hahmo"

        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_insert_emoticon_24_lapinakyva"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#990600"
        android:text="@string/fantabtn"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible" />


    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#990600"
        android:text="@string/scifibtn"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#990600"
        android:text="@string/tietobtn"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="671dp"
        android:gravity="center"
        android:text="@string/ohje"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="65dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/kartta"
        android:layout_width="900dp"
        android:layout_height="550dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_marginBottom="200dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/kartta2"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/marker"
        android:layout_width="40dp"
        android:layout_height="40dp"


        android:layout_alignEnd="@+id/kartta"
        android:layout_alignBottom="@+id/kartta"

        android:layout_marginEnd="650dp"
        android:layout_marginBottom="365dp"
        android:src="@drawable/marker"
        android:visibility="invisible" />
</RelativeLayout>